package com.tasarim.iterator;

public interface Iterable {
    Iterator getIterator();
}
