@startuml
skinparam classAttributeIconSize componentStyle uml2

interface  Iterator{
    +hasNext()
    +hasNextLevel()
    +first()
    +next()
    +nextLevel()
    +currentItem()
}

interface  Iterable  {
    +getIterator()
}
class BreadthIterator  {
    -tree
    -index
    -temp
}
class BreadthTree  {
    -tree
    +buildTree()
    +getTree()
}
class Node  {
    -id
    -name
    -childes

    +addChild()
}
class Main  {
    {static} +main()
}


Iterator <|.. BreadthIterator
Iterable <|.. BreadthTree
Iterable *.. Iterator
BreadthTree ..> Node : <<use>>
BreadthTree ..> Main : <<use>>


@enduml